@@ -1,5 +1,5 @@
 #
-# $Id: GNUmakefile,v 1.4 1997-10-09 21:10:25 d3j191 Exp $
+# $Id: GNUmakefile,v 1.5 1998-12-23 19:41:24 d3j191 Exp $
 #
 
  OBJ_OPTIMIZE =  esp.o\
@@ -8,6 +8,8 @@
                  esp_elemom.o\
                  esp_esp.o\
                  esp_fit.o\
+		 esp_getden.o\
+		 esp_getg.o\
                  esp_getx.o\
                  esp_grid.o\
                  esp_input.o\
